src/objects/Apttus_Config2__LineItem__c.object
<CustomObject>
    <description>Represents a product or service line item</description>
    <fields>
        <fullName>Apttus_Config2__AdHocGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the totaling group associated with the item</description>
        <label>Totaling Group</label>
        <referenceTo>Apttus_Config2__AdHocGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AddedByRuleInfo__c</fullName>
        <description>Information about the auto inclusion constraint rule action and line number that finally triggers the rule is stored here.</description>
        <label>Added By Rule Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AddedBy__c</fullName>
        <description>Indicates who added the product/service line item</description>
        <label>Added By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Default Rule</fullName>
                </value>
                <value>
                    <fullName>Constraint Rule</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustedPrice__c</fullName>
        <description>The adjusted price (including option price)</description>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The manual price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The manual price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>% Discount Off List</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Uplift</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                    <isActive>true</isActive>
                </value>
                <value>
                    <fullName>Base Price Override</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Base Price Discount</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Base Price Markup</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllocateGroupAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether group adjustments should be allocated to the line item</description>
        <label>Allocate Group Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowManualAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether manual price adjustments are allowed for the line item</description>
        <label>Allow Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowProration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether proration is allowed for the line item</description>
        <label>Allow Proration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowRemoval__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the user is allowed to remove the line item</description>
        <label>Allow Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowableAction__c</fullName>
        <description>The action allowed for the end user</description>
        <label>Allowable Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unrestricted</fullName>
                    <default>true</default>
                    <label>Unrestricted</label>
                </value>
                <value>
                    <fullName>Adjust Upwards</fullName>
                </value>
                <value>
                    <fullName>Adjust Downwards</fullName>
                </value>
                <value>
                    <fullName>No Adjustments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the asset associated with the line item</description>
        <inlineHelpText>ID of the asset associated with the line item</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset line item from which the line item is created.</description>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetQuantity__c</fullName>
        <description>The asset quantity</description>
        <inlineHelpText>The asset quantity</inlineHelpText>
        <label>Asset Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AttributeValueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product attribute value</description>
        <label>Attribute Value</label>
        <referenceTo>Apttus_Config2__ProductAttributeValue__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recurring item would auto renew at end of term</description>
        <inlineHelpText>Indicates whether the recurring item would auto renew at end of term</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenewalTerm__c</fullName>
        <description>The auto renewal term</description>
        <inlineHelpText>The auto renewal term</inlineHelpText>
        <label>Auto Renewal Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenewalType__c</fullName>
        <description>The auto renewal type</description>
        <inlineHelpText>The auto renewal type</inlineHelpText>
        <label>Auto Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseCostOverride__c</fullName>
        <description>The base cost overridden by the user</description>
        <inlineHelpText>The base cost overridden by the user</inlineHelpText>
        <label>Base Cost (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseCost__c</fullName>
        <description>The base cost is Cost + Automatic Adjustments for individual products and options</description>
        <label>Base Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseExtendedCost__c</fullName>
        <description>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</description>
        <label>Base Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseExtendedPrice__c</fullName>
        <description>The base extended price is Quantity X Base Price X Term (if applicable) for individual products and options</description>
        <label>Base Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePriceMethod__c</fullName>
        <description>The base price method</description>
        <label>Base Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePriceOverride__c</fullName>
        <description>The base price overridden by the user</description>
        <inlineHelpText>The base price overridden by the user</inlineHelpText>
        <label>Base Price (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePrice__c</fullName>
        <description>The base price is List price + Automatic Adjustments for individual products and options</description>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated base product.</description>
        <label>Base Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Line Items (Base Product)</relationshipLabel>
        <relationshipName>BaseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Bill To)</relationshipLabel>
        <relationshipName>LineItemsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingFrequency__c</fullName>
        <description>The billing frequency associated with the recurring or usage price</description>
        <inlineHelpText>The billing frequency associated with the recurring or usage price</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingRule__c</fullName>
        <description>The billing rule associated with the price item</description>
        <inlineHelpText>The billing rule associated with the price item</inlineHelpText>
        <label>Billing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill In Advance</fullName>
                </value>
                <value>
                    <fullName>Bill In Arrears</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the charge group to which this charge type is associated</description>
        <inlineHelpText>ID of the charge group to which this charge type is associated</inlineHelpText>
        <label>Charge Group</label>
        <referenceTo>Apttus_Config2__ChargeGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeType__c</fullName>
        <description>The charge type  associated with the product or service</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Sales Tax</fullName>
                </value>
                <value>
                    <fullName>Shipping &amp; Handling</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Add-on Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ClassificationHierarchyInfo__c</fullName>
        <description>The category hierarchy information</description>
        <label>Category Hierarchy Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ClassificationHierarchy__c</fullName>
        <description>The category hierarchy</description>
        <label>Category Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product category</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CollaborationParentLineNumber__c</fullName>
        <description>Line number of the collaborated line item from parent configuration</description>
        <inlineHelpText>Line number of the collaborated line item from parent configuration</inlineHelpText>
        <label>Collaboration Parent Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CollaborationRequestId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the Collaboration Request object associated with this line item</description>
        <label>Collaboration</label>
        <referenceTo>Apttus_Config2__CollaborationRequest__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Comments__c</fullName>
        <description>This is for internal use</description>
        <label>Comments (Internal)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CommitmentQuantity__c</fullName>
        <description>The quantity commitment associated with the product or option</description>
        <inlineHelpText>The quantity commitment associated with the product or option</inlineHelpText>
        <label>Commitment Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigStatus__c</fullName>
        <description>Represents whether line item configuration is pending. When a line item is must configure type and the user has not visited the configuration page, it is marked as pending.</description>
        <label>Config Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Default Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <description>ID of the associated configuration</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConstraintCheckStatus__c</fullName>
        <description>Keeps track of whether constraint rules are applied using the context line as the context</description>
        <label>Constraint Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Auto Added</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractNumbers__c</fullName>
        <description>A comma separated list of contract numbers associated with the line item</description>
        <label>Contract Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CopySourceBundleNumber__c</fullName>
        <description>The bundle number from which the current line was copied from</description>
        <inlineHelpText>The bundle number from which the current line was copied from</inlineHelpText>
        <label>Copy Source Bundle Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CopySourceLineNumber__c</fullName>
        <description>The Line Number of the line item the current line was copied from</description>
        <label>Copy Source Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CopySourceNumber__c</fullName>
        <description>The Primary Line Number of the line item the current line was copied from</description>
        <inlineHelpText>The Primary Line Number of the line item the current line was copied from</inlineHelpText>
        <label>Copy Source Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Cost__c</fullName>
        <description>The cost for the product or service with no adjustments</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CouponCode__c</fullName>
        <description>The incentive coupon code</description>
        <inlineHelpText>The incentive coupon code</inlineHelpText>
        <label>Coupon Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Customizable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the product is customizable during selection.</description>
        <label>Customizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeltaPrice__c</fullName>
        <description>The change to the net price of the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</description>
        <inlineHelpText>The change to the net price of the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</inlineHelpText>
        <label>Delta Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeltaQuantity__c</fullName>
        <description>The change in quantity for the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</description>
        <inlineHelpText>The change in quantity for the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</inlineHelpText>
        <label>Delta Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DerivedFromId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the line item this was derived from</description>
        <label>Derived From</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Derived Line Items</relationshipLabel>
        <relationshipName>DerivedLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The line description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndDate__c</fullName>
        <description>The end date for products and services</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedCost__c</fullName>
        <description>The extended cost is Quantity X Term X (Base Cost + Cost Adjustment + Option Cost)</description>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedDescription__c</fullName>
        <description>The extended line description</description>
        <label>Extended Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedPrice__c</fullName>
        <description>The extended price is Quantity X Term X (Base Price + Price Adjustment + Option Price)</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedQuantity__c</fullName>
        <description>The extended quantity is Quantity X Parent Quantity)</description>
        <inlineHelpText>The extended quantity is Quantity X Parent Quantity)</inlineHelpText>
        <label>Extended Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FlatOptionPrice__c</fullName>
        <description>The rolled up adjusted flat price of options for the bundle product</description>
        <inlineHelpText>The rolled up adjusted flat price of options for the bundle product</inlineHelpText>
        <label>Flat Option Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Frequency__c</fullName>
        <description>The pricing frequency associated with the recurring or usage price</description>
        <label>Pricing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupAdjustmentPercent__c</fullName>
        <description>The group adjustment percent</description>
        <label>Group Adjustment (%)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Guidance__c</fullName>
        <description>The pricing guidance associated with the line item</description>
        <inlineHelpText>The pricing guidance associated with the line item</inlineHelpText>
        <label>Guidance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has attributes.</description>
        <label>Has Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasBaseProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line item is associated with a base product</description>
        <label>Has Base Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasDefaults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has default rules.</description>
        <label>Has Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasIncentives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are one or more incentives associated with the line item</description>
        <inlineHelpText>Indicates whether there are one or more incentives associated with the line item</inlineHelpText>
        <label>Has Incentives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has options.</description>
        <label>Has Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasTieredPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line item has a tiered price.</description>
        <inlineHelpText>Indicates whether the line item has a tiered price.</inlineHelpText>
        <label>Has Tiered Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideCopyAction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to hide copy action for a line item</description>
        <inlineHelpText>Check to hide copy action for the line item</inlineHelpText>
        <label>Hide Copy Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideInvoiceDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the item would be hidden in the invoice display.</description>
        <inlineHelpText>Indicates whether the item would be hidden in the invoice display.</inlineHelpText>
        <label>Hide Invoice Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveAdjustmentAmount__c</fullName>
        <description>The incentive benefit amount</description>
        <inlineHelpText>The incentive benefit amount</inlineHelpText>
        <label>Incentive Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveBasePrice__c</fullName>
        <description>The incentive base price is Base price + Incentive Adjustments for individual products and options</description>
        <inlineHelpText>The incentive base price is Base price + Incentive Adjustments for individual products and options</inlineHelpText>
        <label>Incentive Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveCode__c</fullName>
        <description>The incentive code available to customers to identify the incentive</description>
        <inlineHelpText>The incentive code available to customers to identify the incentive</inlineHelpText>
        <label>Incentive Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>